<resources>
    <string name="app_name">ProductInventory</string>
    <string name="action_settings">Settings</string>
    <string name="prdctName">Product Name</string>
    <string name="sellingPrice">Selling Price</string>
    <string name="prdctQuantity">Quantity</string>
    <string name="prdctSupplier">Product Supplier</string>
    <string name="supplierPhone">Supplier Phone</string>
    <string name="saveString">Save</string>
    <string name="deleteString">Delete</string>
    <string name="errorString">Error with inserting product</string>
    <string name="insertedProduct">Product inserted with row id: </string>
    <string name="empty_view_text">There is nothing on database now.\n  You can add product here</string>
    <string name="editor_activity_title_new_product">Add New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_successful">Insertion successful</string>
    <string name="editor_insert_product_failed">Insertion failed</string>
    <string name="editor_update_product_successful">Product is successfully updated</string>
    <string name="editor_update_product_failed">Product couldn\'t be updated</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_products_msg">Delete all products from database ?</string>
    <string name="out_of_stock">This product is out of stock!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Deleting product failed</string>
    <string name="editor_delete_product_successful">Deleting product successful</string>
    <string name="delete_all">Delete All Products</string>
    <string name="minValue">Minimum value</string>
    <string name="discard">Discard</string>
    <string name="currency">&#160;$</string>
    <string name="sale">Sale</string>
    <string name="sold_product">Product sold</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!---Strings related to back4app-->

    <string name="loading">Loading…</string>
    <string name="myPassword">2286040</string>
    <string name="myEmail">ftzneu@gmail.com</string>
    <string name="prdctBarcode">Barcode</string>
    <string name="purchasePrice">Purchase Price</string>
    <string name="zero">0</string>
    <string name="inventory">Inventory</string>
    <string name="editor">Edit</string>
    <string name="account">Account &amp; More</string>
    <string name="title_activity_account">AccountActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="accountFragment">Account &amp; More</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groupSpinner">Group Name</string>
    <string name="Search">Search for</string>

</resources>
