<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/editPageLayout">

        <RelativeLayout
            android:id="@+id/editPageImageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <android.support.v7.widget.CardView
                android:id="@+id/view2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="40dp">

                <ProgressBar
                    android:id="@+id/imageProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/editPageImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/noimage" />

            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/cameraButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:src="@android:drawable/ic_menu_camera" />

            <ImageButton
                android:id="@+id/galeriButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_menu_gallery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin">

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/brcText"
                    style="@style/MyHintText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/barCodeEditText"
                        style="@style/MyEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:hint="@string/prdctBarcode"
                        android:inputType="number"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="scan"
                    android:src="@drawable/scan_barcode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="@id/brcText" />

            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/MyHintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/prdName"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:hint="@string/prdctName"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin">

            <android.support.design.widget.TextInputLayout
                style="@style/MyHintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/prdPurchasePrice"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/purchasePrice"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/MyHintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/prdSellingPrice"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:digits="1234567890.,"
                    android:hint="@string/sellingPrice"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin">

            <android.support.design.widget.TextInputLayout
                style="@style/MyHintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/prdQuantity"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:hint="@string/prdctQuantity"
                    android:inputType="number"
                    android:maxLength="6" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/MyHintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/prdSupplier"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:hint="@string/prdctSupplier"
                    android:inputType="text"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin">

            <android.support.design.widget.TextInputLayout
                style="@style/MyHintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/supplierPhone"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplierPhone"
                    android:inputType="phone"
                    android:maxLength="13" />
            </android.support.design.widget.TextInputLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/grpText"
                    style="@style/MyHintText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin">

                    <EditText
                        android:id="@+id/prdGroupName"
                        style="@style/MyEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/groupSpinner"
                        android:inputType="text"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/grupSpinner"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="@id/grpText"
                    android:spinnerMode="dropdown">

                </Spinner>


            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>